Fix zone chart overflow

--- a/ui/css/cloudstack3.css
+++ b/ui/css/cloudstack3.css
@@ -3509,7 +3509,7 @@ Dialogs*/
 
 .system-chart-view {
   width: 100%;
-  height: auto;
+  height: 589px;
   overflow: auto;
   font-weight: normal;
   margin-top: 0;
